🐛 fix(forminator-form): Set title/subtitle spacing as basic styles.

--- a/packages/forminator-form/src/scss/form-basic/_typography.scss
+++ b/packages/forminator-form/src/scss/form-basic/_typography.scss
@@ -7,6 +7,9 @@
 		.forminator-title,
 		.forminator-subtitle {
 			display: block;
+			margin: 0;
+			padding: 0;
+			border: 0;
 		}
 
 		.forminator-label {
