--- a/packages/forminator-form/src/scss/form-material/_typography.scss
+++ b/packages/forminator-form/src/scss/form-material/_typography.scss
@@ -10,9 +10,6 @@ $icon-size: 16px !default;
 
 		.forminator-title,
 		.forminator-subtitle {
-			margin: 0;
-			padding: 0;
-			border: 0;
 
 			&:before,
 			&:after {
