--- a/packages/forminator-form/src/scss/form-styled/_typography.scss
+++ b/packages/forminator-form/src/scss/form-styled/_typography.scss
@@ -7,9 +7,6 @@
 
 		.forminator-title,
 		.forminator-subtitle {
-			margin: 0;
-			padding: 0;
-			border: 0;
 
 			&:before,
 			&:after {
